--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My First Parcel App</title><link rel="stylesheet" href="/parcel-progect.8f34c7bc.css"></head><body> <h1>Hello, World!</h1> <script src="/parcel-progect.e3972529.js"></script> </body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My First Parcel App</title><link rel="stylesheet" href="/parcel-progect/parcel-progect.8f34c7bc.css"></head><body> <h1>Hello, World!</h1> <script src="/parcel-progect/parcel-progect.e3972529.js"></script> </body></html>
