--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <title></title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>My first parcel homework</h1>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
